--- a/index.html
+++ b/index.html
@@ -178,12 +178,7 @@
                         <span class="lang-en">Start Now <i class="fa-solid fa-arrow-right"></i></span>
                         <span class="lang-pl">Rozpocznij <i class="fa-solid fa-arrow-right"></i></span>
                     </a>
-                    <a href="#features"
-                        class="bg-slate-800 hover:bg-slate-700 text-white px-8 py-4 rounded-xl font-bold text-lg transition flex items-center justify-center gap-2 border border-slate-700">
-                        <i class="fa-solid fa-play"></i>
-                        <span class="lang-en">Live Demo</span>
-                        <span class="lang-pl">Demo Systemu</span>
-                    </a>
+
                 </div>
                 <div class="mt-12 flex justify-center gap-8 text-slate-500 opacity-70 grayscale">
                     <i class="fa-brands fa-cc-visa text-4xl"></i>
@@ -402,7 +397,8 @@
                                 <div class="flex items-center gap-3">
                                     <div
                                         class="w-8 h-8 rounded-full bg-green-100 flex items-center justify-center text-green-600">
-                                        <i class="fa-solid fa-arrow-down"></i></div>
+                                        <i class="fa-solid fa-arrow-down"></i>
+                                    </div>
                                     <div>
                                         <div class="font-medium text-sm">
                                             <span class="lang-en">Payment #8832</span>
@@ -417,7 +413,8 @@
                                 <div class="flex items-center gap-3">
                                     <div
                                         class="w-8 h-8 rounded-full bg-red-100 flex items-center justify-center text-red-600">
-                                        <i class="fa-solid fa-arrow-up"></i></div>
+                                        <i class="fa-solid fa-arrow-up"></i>
+                                    </div>
                                     <div>
                                         <div class="font-medium text-sm">
                                             <span class="lang-en">Partner Payout</span>
