--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     <a href="#geo" class="text-slate-600 hover:text-emerald-600 font-medium transition">
                         <span class="lang-en">Coverage</span><span class="lang-pl">Zasięg</span>
                     </a>
-                    <a href="#integration" class="text-slate-600 hover:text-emerald-600 font-medium transition">API</a>
+
                     <a href="#faq" class="text-slate-600 hover:text-emerald-600 font-medium transition">FAQ</a>
                 </nav>
 
@@ -137,7 +137,7 @@
             <a href="#geo" class="block py-2 text-slate-600 font-medium">
                 <span class="lang-en">Coverage</span><span class="lang-pl">Zasięg</span>
             </a>
-            <a href="#integration" class="block py-2 text-slate-600 font-medium">API</a>
+
             <a href="#contact" class="block mt-4 text-center bg-slate-900 text-white py-2 rounded-lg font-semibold">
                 <span class="lang-en">Get Started</span><span class="lang-pl">Dołącz teraz</span>
             </a>
@@ -446,234 +446,102 @@
                 </p>
             </div>
 
-            <div class="grid grid-cols-2 md:grid-cols-4 gap-6 text-center">
-                <div class="p-6 bg-slate-800 rounded-xl hover:bg-slate-700 transition cursor-default">
-                    <i class="fa-solid fa-earth-europe text-4xl text-emerald-400 mb-4"></i>
-                    <h3 class="font-bold text-lg">Europe (SEPA)</h3>
-                    <p class="text-sm text-slate-400 mt-2">Cards, Sofort, Giropay, BLIK</p>
+            <div class="grid grid-cols-2 md:grid-cols-4 lg:grid-cols-5 gap-4 text-center">
+                <!-- Ukraine -->
+                <div class="p-4 bg-slate-800 rounded-xl hover:bg-slate-700 transition cursor-default">
+                    <div class="text-2xl mb-2">🇺🇦</div>
+                    <h3 class="font-bold text-base">Ukraine</h3>
+                    <p class="text-xs text-slate-400 mt-1">Privat24, NovaPay</p>
                 </div>
-                <div class="p-6 bg-slate-800 rounded-xl hover:bg-slate-700 transition cursor-default">
-                    <i class="fa-solid fa-earth-americas text-4xl text-blue-400 mb-4"></i>
-                    <h3 class="font-bold text-lg">LATAM</h3>
-                    <p class="text-sm text-slate-400 mt-2">PIX (Brazil), OXXO, Boleto</p>
+                <!-- Germany -->
+                <div class="p-4 bg-slate-800 rounded-xl hover:bg-slate-700 transition cursor-default">
+                    <div class="text-2xl mb-2">🇩🇪</div>
+                    <h3 class="font-bold text-base">Germany</h3>
+                    <p class="text-xs text-slate-400 mt-1">Wero</p>
                 </div>
-                <div class="p-6 bg-slate-800 rounded-xl hover:bg-slate-700 transition cursor-default">
-                    <i class="fa-solid fa-earth-asia text-4xl text-red-400 mb-4"></i>
-                    <h3 class="font-bold text-lg">Asia</h3>
-                    <p class="text-sm text-slate-400 mt-2">AliPay, WeChat, UPI (India)</p>
+                <!-- India -->
+                <div class="p-4 bg-slate-800 rounded-xl hover:bg-slate-700 transition cursor-default">
+                    <div class="text-2xl mb-2">🇮🇳</div>
+                    <h3 class="font-bold text-base">India</h3>
+                    <p class="text-xs text-slate-400 mt-1">UPI, IMPS</p>
                 </div>
-                <div class="p-6 bg-slate-800 rounded-xl hover:bg-slate-700 transition cursor-default">
-                    <i class="fa-brands fa-bitcoin text-4xl text-yellow-500 mb-4"></i>
-                    <h3 class="font-bold text-lg">Crypto</h3>
-                    <p class="text-sm text-slate-400 mt-2">USDT, BTC, ETH (Auto-convert)</p>
+                <!-- Turkey -->
+                <div class="p-4 bg-slate-800 rounded-xl hover:bg-slate-700 transition cursor-default">
+                    <div class="text-2xl mb-2">🇹🇷</div>
+                    <h3 class="font-bold text-base">Turkey</h3>
+                    <p class="text-xs text-slate-400 mt-1">Papara, TROY</p>
                 </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- 5. Security -->
-    <section class="py-16 bg-white border-b border-slate-100">
-        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-            <div class="flex flex-col md:flex-row justify-between items-center gap-8">
-                <div class="md:w-1/2">
-                    <h2 class="text-3xl font-bold text-slate-900 mb-4">
-                        <span class="lang-en">Bank-Grade Security</span>
-                        <span class="lang-pl">Bezpieczeństwo Poziomu Bankowego</span>
-                    </h2>
-                    <ul class="space-y-4">
-                        <li class="flex items-start gap-3">
-                            <i class="fa-solid fa-shield-halved text-emerald-500 mt-1"></i>
-                            <div>
-                                <strong class="block text-slate-900">PCI DSS Level 1</strong>
-                                <span class="text-sm text-slate-500">
-                                    <span class="lang-en">Certified storage of card data.</span>
-                                    <span class="lang-pl">Certyfikowane przechowywanie danych kartowych.</span>
-                                </span>
-                            </div>
-                        </li>
-                        <li class="flex items-start gap-3">
-                            <i class="fa-solid fa-user-shield text-emerald-500 mt-1"></i>
-                            <div>
-                                <strong class="block text-slate-900">Anti-Fraud System</strong>
-                                <span class="text-sm text-slate-500">
-                                    <span class="lang-en">AI monitoring of suspicious transactions in real-time.</span>
-                                    <span class="lang-pl">Monitoring AI podejrzanych transakcji w czasie
-                                        rzeczywistym.</span>
-                                </span>
-                            </div>
-                        </li>
-                        <li class="flex items-start gap-3">
-                            <i class="fa-solid fa-file-contract text-emerald-500 mt-1"></i>
-                            <div>
-                                <strong class="block text-slate-900">KYC/AML Compliance</strong>
-                                <span class="text-sm text-slate-500">
-                                    <span class="lang-en">Automated user verification without delays.</span>
-                                    <span class="lang-pl">Automatyczna weryfikacja użytkowników bez opóźnień.</span>
-                                </span>
-                            </div>
-                        </li>
-                    </ul>
+                <!-- China -->
+                <div class="p-4 bg-slate-800 rounded-xl hover:bg-slate-700 transition cursor-default">
+                    <div class="text-2xl mb-2">🇨🇳</div>
+                    <h3 class="font-bold text-base">China</h3>
+                    <p class="text-xs text-slate-400 mt-1">WeChat, Alipay, UnionPay</p>
                 </div>
-                <div
-                    class="md:w-1/3 flex justify-center gap-6 opacity-60 grayscale hover:grayscale-0 transition duration-500">
-                    <div class="text-center">
-                        <i class="fa-brands fa-cc-visa text-6xl text-blue-900"></i>
-                        <p class="text-xs mt-2 font-bold">Verified</p>
-                    </div>
-                    <div class="text-center">
-                        <i class="fa-solid fa-lock text-6xl text-slate-800"></i>
-                        <p class="text-xs mt-2 font-bold">PCI DSS</p>
-                    </div>
+                <!-- Poland -->
+                <div class="p-4 bg-slate-800 rounded-xl hover:bg-slate-700 transition cursor-default">
+                    <div class="text-2xl mb-2">🇵🇱</div>
+                    <h3 class="font-bold text-base">Poland</h3>
+                    <p class="text-xs text-slate-400 mt-1">Blik</p>
                 </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- 6. Integration -->
-    <section id="integration" class="py-20 bg-slate-50">
-        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-            <div class="flex flex-col lg:flex-row gap-12">
-                <div class="lg:w-1/2">
-                    <span class="text-emerald-600 font-bold uppercase tracking-wider text-sm">
-                        <span class="lang-en">For Developers</span>
-                        <span class="lang-pl">Dla Programistów</span>
-                    </span>
-                    <h2 class="text-3xl font-bold text-slate-900 mt-2 mb-6">
-                        <span class="lang-en">Integration in 30 Minutes</span>
-                        <span class="lang-pl">Integracja w 30 Minut</span>
-                    </h2>
-                    <p class="text-slate-600 mb-8">
-                        <span class="lang-en">Our RESTful API is meticulously documented. Use ready-made SDKs for PHP,
-                            Python, Node.js, or plugins for popular CMS.</span>
-                        <span class="lang-pl">Nasze API RESTful jest szczegółowo udokumentowane. Użyj gotowych SDK dla
-                            PHP, Python, Node.js lub wtyczek do popularnych CMS.</span>
-                    </p>
-                    <div class="flex flex-wrap gap-3 mb-8">
-                        <span
-                            class="px-4 py-2 bg-white border border-slate-200 rounded-lg text-sm font-mono text-slate-600 shadow-sm">WordPress</span>
-                        <span
-                            class="px-4 py-2 bg-white border border-slate-200 rounded-lg text-sm font-mono text-slate-600 shadow-sm">Shopify</span>
-                        <span
-                            class="px-4 py-2 bg-white border border-slate-200 rounded-lg text-sm font-mono text-slate-600 shadow-sm">WooCommerce</span>
-                        <span
-                            class="px-4 py-2 bg-white border border-slate-200 rounded-lg text-sm font-mono text-slate-600 shadow-sm">Magento</span>
-                    </div>
-                    <a href="#" class="text-emerald-600 font-bold hover:underline">
-                        <span class="lang-en">Read API Docs <i class="fa-solid fa-arrow-right ml-1"></i></span>
-                        <span class="lang-pl">Dokumentacja API <i class="fa-solid fa-arrow-right ml-1"></i></span>
-                    </a>
+                <!-- Indonesia -->
+                <div class="p-4 bg-slate-800 rounded-xl hover:bg-slate-700 transition cursor-default">
+                    <div class="text-2xl mb-2">🇮🇩</div>
+                    <h3 class="font-bold text-base">Indonesia</h3>
+                    <p class="text-xs text-slate-400 mt-1">QRIS</p>
                 </div>
-                <div class="lg:w-1/2 bg-slate-900 rounded-xl p-6 shadow-2xl overflow-hidden font-mono text-sm">
-                    <div class="flex items-center gap-2 mb-4 border-b border-slate-700 pb-2">
-                        <div class="w-3 h-3 rounded-full bg-red-500"></div>
-                        <div class="w-3 h-3 rounded-full bg-yellow-500"></div>
-                        <div class="w-3 h-3 rounded-full bg-green-500"></div>
-                        <span class="text-slate-400 text-xs ml-2">POST /v1/payments</span>
-                    </div>
-                    <div class="text-green-400">
-                        <span class="text-purple-400">curl</span> -X POST https://api.realtalk.dev/v1/charge \<br>
-                        &nbsp;&nbsp;-u <span class="text-yellow-300">"<YOUR_API_KEY>"</span> \<br>
-                        &nbsp;&nbsp;-d <span class="text-blue-300">amount</span>=2000 \<br>
-                        &nbsp;&nbsp;-d <span class="text-blue-300">currency</span>=usd \<br>
-                        &nbsp;&nbsp;-d <span class="text-blue-300">source</span>=tok_visa \<br>
-                        &nbsp;&nbsp;-d <span class="text-blue-300">description</span>="Charge for order #1234"
-                    </div>
-                    <div class="mt-4 text-slate-400 border-t border-slate-700 pt-4">
-                        <span class="text-blue-400">{</span><br>
-                        &nbsp;&nbsp;"id": "ch_1I5W...",<br>
-                        &nbsp;&nbsp;"object": "charge",<br>
-                        &nbsp;&nbsp;"amount": 2000,<br>
-                        &nbsp;&nbsp;"status": <span class="text-green-400">"succeeded"</span><br>
-                        <span class="text-blue-400">}</span>
-                    </div>
+                <!-- UK -->
+                <div class="p-4 bg-slate-800 rounded-xl hover:bg-slate-700 transition cursor-default">
+                    <div class="text-2xl mb-2">🇬🇧</div>
+                    <h3 class="font-bold text-base">UK</h3>
+                    <p class="text-xs text-slate-400 mt-1">Faster Payments</p>
+                </div>
+                <!-- International -->
+                <div class="p-4 bg-slate-800 rounded-xl hover:bg-slate-700 transition cursor-default">
+                    <div class="text-2xl mb-2">🌍</div>
+                    <h3 class="font-bold text-base">International</h3>
+                    <p class="text-xs text-slate-400 mt-1">Visa, Mastercard</p>
+                </div>
+                <!-- USA -->
+                <div class="p-4 bg-slate-800 rounded-xl hover:bg-slate-700 transition cursor-default">
+                    <div class="text-2xl mb-2">🇺🇸</div>
+                    <h3 class="font-bold text-base">USA</h3>
+                    <p class="text-xs text-slate-400 mt-1">AMX</p>
+                </div>
+                <!-- Netherlands -->
+                <div class="p-4 bg-slate-800 rounded-xl hover:bg-slate-700 transition cursor-default">
+                    <div class="text-2xl mb-2">🇳🇱</div>
+                    <h3 class="font-bold text-base">Netherlands</h3>
+                    <p class="text-xs text-slate-400 mt-1">iDeal</p>
+                </div>
+                <!-- Switzerland -->
+                <div class="p-4 bg-slate-800 rounded-xl hover:bg-slate-700 transition cursor-default">
+                    <div class="text-2xl mb-2">🇨🇭</div>
+                    <h3 class="font-bold text-base">Switzerland</h3>
+                    <p class="text-xs text-slate-400 mt-1">TWINT</p>
+                </div>
+                <!-- Spain -->
+                <div class="p-4 bg-slate-800 rounded-xl hover:bg-slate-700 transition cursor-default">
+                    <div class="text-2xl mb-2">🇪🇸</div>
+                    <h3 class="font-bold text-base">Spain</h3>
+                    <p class="text-xs text-slate-400 mt-1">Bizum</p>
+                </div>
+                <!-- Italy -->
+                <div class="p-4 bg-slate-800 rounded-xl hover:bg-slate-700 transition cursor-default">
+                    <div class="text-2xl mb-2">🇮🇹</div>
+                    <h3 class="font-bold text-base">Italy</h3>
+                    <p class="text-xs text-slate-400 mt-1">Bankomat Pay</p>
                 </div>
             </div>
         </div>
     </section>
 
-    <!-- 7. Advantages (Stats) -->
-    <section class="py-16 bg-emerald-600 text-white">
-        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-            <div class="grid grid-cols-2 md:grid-cols-4 gap-8 text-center divide-x divide-emerald-500/50">
-                <div>
-                    <div class="text-4xl font-bold mb-2">99.9%</div>
-                    <div class="text-emerald-100 text-sm">System Uptime</div>
-                </div>
-                <div>
-                    <div class="text-4xl font-bold mb-2">&lt; 15m</div>
-                    <div class="text-emerald-100 text-sm">
-                        <span class="lang-en">Support Reply</span>
-                        <span class="lang-pl">Odp. Supportu</span>
-                    </div>
-                </div>
-                <div>
-                    <div class="text-4xl font-bold mb-2">T+0</div>
-                    <div class="text-emerald-100 text-sm">
-                        <span class="lang-en">Payout Speed</span>
-                        <span class="lang-pl">Szybkość Wypłat</span>
-                    </div>
-                </div>
-                <div>
-                    <div class="text-4xl font-bold mb-2">3.5%</div>
-                    <div class="text-emerald-100 text-sm">
-                        <span class="lang-en">Starting Rate</span>
-                        <span class="lang-pl">Prowizja od</span>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
 
-    <!-- 8. Clients & Testimonials -->
-    <section class="py-20 bg-white">
-        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-            <div class="text-center mb-12">
-                <h2 class="text-3xl font-bold text-slate-900">
-                    <span class="lang-en">Trusted by Market Leaders</span>
-                    <span class="lang-pl">Zaufali nam Liderzy Rynku</span>
-                </h2>
-            </div>
-            <!-- Logos -->
-            <div class="flex flex-wrap justify-center gap-12 opacity-60 mb-16 grayscale">
-                <!-- Mockup Logos -->
-                <div class="flex items-center gap-2 text-xl font-bold"><i class="fa-brands fa-aws text-3xl"></i>
-                    CloudServ</div>
-                <div class="flex items-center gap-2 text-xl font-bold"><i class="fa-brands fa-spotify text-3xl"></i>
-                    MusicStream</div>
-                <div class="flex items-center gap-2 text-xl font-bold"><i class="fa-solid fa-cube text-3xl"></i>
-                    BlockChainInc</div>
-                <div class="flex items-center gap-2 text-xl font-bold"><i class="fa-solid fa-gamepad text-3xl"></i>
-                    BetWinner</div>
-            </div>
 
-            <!-- One Review -->
-            <div class="max-w-3xl mx-auto bg-slate-50 p-8 rounded-2xl relative">
-                <i class="fa-solid fa-quote-left text-4xl text-slate-200 absolute top-6 left-6"></i>
-                <div class="lang-en">
-                    <p class="text-lg text-slate-700 italic relative z-10 mb-6 text-center">
-                        "After integrating Realtalk Payments, our Approval Ratio grew by 18%. We are especially happy
-                        with instant partner payouts in USDT — it solved a huge issue with cross-border transfers."
-                    </p>
-                </div>
-                <div class="lang-pl">
-                    <p class="text-lg text-slate-700 italic relative z-10 mb-6 text-center">
-                        "Po integracji z Realtalk Payments nasz wskaźnik akceptacji wzrósł o 18%. Szczególnie cieszą
-                        natychmiastowe wypłaty dla partnerów w USDT — to rozwiązało ogromny problem z przelewami
-                        transgranicznymi."
-                    </p>
-                </div>
-                <div class="flex items-center justify-center gap-4">
-                    <div class="w-12 h-12 bg-slate-300 rounded-full overflow-hidden">
-                        <img src="https://api.dicebear.com/7.x/avataaars/svg?seed=Alex" alt="Avatar">
-                    </div>
-                    <div class="text-left">
-                        <div class="font-bold text-slate-900">Alex Volkov</div>
-                        <div class="text-sm text-slate-500">CTO, GamingAlliance LTD</div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
+
+
+
+
+
 
     <!-- 9. FAQ -->
     <section id="faq" class="py-20 bg-slate-50">
