--- a/index.html
+++ b/index.html
@@ -180,11 +180,13 @@
                     </a>
 
                 </div>
-                <div class="mt-12 flex justify-center gap-8 text-slate-500 opacity-70 grayscale">
-                    <i class="fa-brands fa-cc-visa text-4xl"></i>
-                    <i class="fa-brands fa-cc-mastercard text-4xl"></i>
-                    <i class="fa-brands fa-bitcoin text-4xl"></i>
-                    <i class="fa-brands fa-apple-pay text-4xl"></i>
+                <div
+                    class="mt-12 flex flex-wrap justify-center gap-8 text-slate-500 opacity-70 grayscale hover:grayscale-0 transition-all duration-500">
+                    <i class="fa-brands fa-cc-visa text-6xl hover:text-blue-600 transition-colors"></i>
+                    <i class="fa-brands fa-cc-mastercard text-6xl hover:text-red-500 transition-colors"></i>
+                    <i class="fa-brands fa-cc-amex text-6xl hover:text-blue-500 transition-colors"></i>
+                    <i class="fa-brands fa-alipay text-6xl hover:text-blue-400 transition-colors"></i>
+                    <i class="fa-brands fa-weixin text-6xl hover:text-green-500 transition-colors"></i>
                 </div>
             </div>
         </div>
@@ -446,87 +448,87 @@
                 </p>
             </div>
 
-            <div class="grid grid-cols-2 md:grid-cols-4 lg:grid-cols-5 gap-4 text-center">
+            <div class="flex flex-wrap justify-center gap-4 text-center">
                 <!-- Ukraine -->
-                <div class="p-4 bg-slate-800 rounded-xl hover:bg-slate-700 transition cursor-default">
+                <div class="p-4 bg-slate-800 rounded-xl hover:bg-slate-700 transition cursor-default w-40 md:w-48">
                     <div class="text-2xl mb-2">🇺🇦</div>
                     <h3 class="font-bold text-base">Ukraine</h3>
                     <p class="text-xs text-slate-400 mt-1">Privat24, NovaPay</p>
                 </div>
                 <!-- Germany -->
-                <div class="p-4 bg-slate-800 rounded-xl hover:bg-slate-700 transition cursor-default">
+                <div class="p-4 bg-slate-800 rounded-xl hover:bg-slate-700 transition cursor-default w-40 md:w-48">
                     <div class="text-2xl mb-2">🇩🇪</div>
                     <h3 class="font-bold text-base">Germany</h3>
                     <p class="text-xs text-slate-400 mt-1">Wero</p>
                 </div>
                 <!-- India -->
-                <div class="p-4 bg-slate-800 rounded-xl hover:bg-slate-700 transition cursor-default">
+                <div class="p-4 bg-slate-800 rounded-xl hover:bg-slate-700 transition cursor-default w-40 md:w-48">
                     <div class="text-2xl mb-2">🇮🇳</div>
                     <h3 class="font-bold text-base">India</h3>
                     <p class="text-xs text-slate-400 mt-1">UPI, IMPS</p>
                 </div>
                 <!-- Turkey -->
-                <div class="p-4 bg-slate-800 rounded-xl hover:bg-slate-700 transition cursor-default">
+                <div class="p-4 bg-slate-800 rounded-xl hover:bg-slate-700 transition cursor-default w-40 md:w-48">
                     <div class="text-2xl mb-2">🇹🇷</div>
                     <h3 class="font-bold text-base">Turkey</h3>
                     <p class="text-xs text-slate-400 mt-1">Papara, TROY</p>
                 </div>
                 <!-- China -->
-                <div class="p-4 bg-slate-800 rounded-xl hover:bg-slate-700 transition cursor-default">
+                <div class="p-4 bg-slate-800 rounded-xl hover:bg-slate-700 transition cursor-default w-40 md:w-48">
                     <div class="text-2xl mb-2">🇨🇳</div>
                     <h3 class="font-bold text-base">China</h3>
                     <p class="text-xs text-slate-400 mt-1">WeChat, Alipay, UnionPay</p>
                 </div>
                 <!-- Poland -->
-                <div class="p-4 bg-slate-800 rounded-xl hover:bg-slate-700 transition cursor-default">
+                <div class="p-4 bg-slate-800 rounded-xl hover:bg-slate-700 transition cursor-default w-40 md:w-48">
                     <div class="text-2xl mb-2">🇵🇱</div>
                     <h3 class="font-bold text-base">Poland</h3>
                     <p class="text-xs text-slate-400 mt-1">Blik</p>
                 </div>
                 <!-- Indonesia -->
-                <div class="p-4 bg-slate-800 rounded-xl hover:bg-slate-700 transition cursor-default">
+                <div class="p-4 bg-slate-800 rounded-xl hover:bg-slate-700 transition cursor-default w-40 md:w-48">
                     <div class="text-2xl mb-2">🇮🇩</div>
                     <h3 class="font-bold text-base">Indonesia</h3>
                     <p class="text-xs text-slate-400 mt-1">QRIS</p>
                 </div>
                 <!-- UK -->
-                <div class="p-4 bg-slate-800 rounded-xl hover:bg-slate-700 transition cursor-default">
+                <div class="p-4 bg-slate-800 rounded-xl hover:bg-slate-700 transition cursor-default w-40 md:w-48">
                     <div class="text-2xl mb-2">🇬🇧</div>
                     <h3 class="font-bold text-base">UK</h3>
                     <p class="text-xs text-slate-400 mt-1">Faster Payments</p>
                 </div>
                 <!-- International -->
-                <div class="p-4 bg-slate-800 rounded-xl hover:bg-slate-700 transition cursor-default">
+                <div class="p-4 bg-slate-800 rounded-xl hover:bg-slate-700 transition cursor-default w-40 md:w-48">
                     <div class="text-2xl mb-2">🌍</div>
                     <h3 class="font-bold text-base">International</h3>
                     <p class="text-xs text-slate-400 mt-1">Visa, Mastercard</p>
                 </div>
                 <!-- USA -->
-                <div class="p-4 bg-slate-800 rounded-xl hover:bg-slate-700 transition cursor-default">
+                <div class="p-4 bg-slate-800 rounded-xl hover:bg-slate-700 transition cursor-default w-40 md:w-48">
                     <div class="text-2xl mb-2">🇺🇸</div>
                     <h3 class="font-bold text-base">USA</h3>
                     <p class="text-xs text-slate-400 mt-1">AMX</p>
                 </div>
                 <!-- Netherlands -->
-                <div class="p-4 bg-slate-800 rounded-xl hover:bg-slate-700 transition cursor-default">
+                <div class="p-4 bg-slate-800 rounded-xl hover:bg-slate-700 transition cursor-default w-40 md:w-48">
                     <div class="text-2xl mb-2">🇳🇱</div>
                     <h3 class="font-bold text-base">Netherlands</h3>
                     <p class="text-xs text-slate-400 mt-1">iDeal</p>
                 </div>
                 <!-- Switzerland -->
-                <div class="p-4 bg-slate-800 rounded-xl hover:bg-slate-700 transition cursor-default">
+                <div class="p-4 bg-slate-800 rounded-xl hover:bg-slate-700 transition cursor-default w-40 md:w-48">
                     <div class="text-2xl mb-2">🇨🇭</div>
                     <h3 class="font-bold text-base">Switzerland</h3>
                     <p class="text-xs text-slate-400 mt-1">TWINT</p>
                 </div>
                 <!-- Spain -->
-                <div class="p-4 bg-slate-800 rounded-xl hover:bg-slate-700 transition cursor-default">
+                <div class="p-4 bg-slate-800 rounded-xl hover:bg-slate-700 transition cursor-default w-40 md:w-48">
                     <div class="text-2xl mb-2">🇪🇸</div>
                     <h3 class="font-bold text-base">Spain</h3>
                     <p class="text-xs text-slate-400 mt-1">Bizum</p>
                 </div>
                 <!-- Italy -->
-                <div class="p-4 bg-slate-800 rounded-xl hover:bg-slate-700 transition cursor-default">
+                <div class="p-4 bg-slate-800 rounded-xl hover:bg-slate-700 transition cursor-default w-40 md:w-48">
                     <div class="text-2xl mb-2">🇮🇹</div>
                     <h3 class="font-bold text-base">Italy</h3>
                     <p class="text-xs text-slate-400 mt-1">Bankomat Pay</p>
