--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 <!-- Desktop Nav -->
                 <nav class="hidden md:flex space-x-8 items-center">
                     <a href="#features" class="text-slate-600 hover:text-emerald-600 font-medium transition">
-                        <span class="lang-en">Features</span><span class="lang-pl">Funkcje</span>
+                        <span class="lang-en">Payment Methods</span><span class="lang-pl">Metody Płatności</span>
                     </a>
                     <a href="#geo" class="text-slate-600 hover:text-emerald-600 font-medium transition">
                         <span class="lang-en">Coverage</span><span class="lang-pl">Zasięg</span>
@@ -132,7 +132,7 @@
         <!-- Mobile Menu -->
         <div id="mobile-menu" class="hidden md:hidden bg-white border-t border-slate-100 p-4 shadow-lg">
             <a href="#features" class="block py-2 text-slate-600 font-medium">
-                <span class="lang-en">Features</span><span class="lang-pl">Funkcje</span>
+                <span class="lang-en">Payment Methods</span><span class="lang-pl">Metody Płatności</span>
             </a>
             <a href="#geo" class="block py-2 text-slate-600 font-medium">
                 <span class="lang-en">Coverage</span><span class="lang-pl">Zasięg</span>
