--- a/index.html
+++ b/index.html
@@ -84,10 +84,10 @@
 
                 <!-- Desktop Nav -->
                 <nav class="hidden md:flex space-x-8 items-center">
-                    <a href="#features" class="text-slate-600 hover:text-emerald-600 font-medium transition">
+                    <a href="#payment-methods" class="text-slate-600 hover:text-emerald-600 font-medium transition">
                         <span class="lang-en">Payment Methods</span><span class="lang-pl">Metody Płatności</span>
                     </a>
-                    <a href="#geo" class="text-slate-600 hover:text-emerald-600 font-medium transition">
+                    <a href="#payment-methods" class="text-slate-600 hover:text-emerald-600 font-medium transition">
                         <span class="lang-en">Coverage</span><span class="lang-pl">Zasięg</span>
                     </a>
 
@@ -131,10 +131,10 @@
         </div>
         <!-- Mobile Menu -->
         <div id="mobile-menu" class="hidden md:hidden bg-white border-t border-slate-100 p-4 shadow-lg">
-            <a href="#features" class="block py-2 text-slate-600 font-medium">
+            <a href="#payment-methods" class="block py-2 text-slate-600 font-medium">
                 <span class="lang-en">Payment Methods</span><span class="lang-pl">Metody Płatności</span>
             </a>
-            <a href="#geo" class="block py-2 text-slate-600 font-medium">
+            <a href="#payment-methods" class="block py-2 text-slate-600 font-medium">
                 <span class="lang-en">Coverage</span><span class="lang-pl">Zasięg</span>
             </a>
 
@@ -160,10 +160,10 @@
                     </span>
                 </div>
                 <h1 class="text-4xl md:text-6xl font-extrabold tracking-tight mb-6 leading-tight">
-                    <span class="lang-en">Global Acquiring <br /><span class="gradient-text">No Questions
-                            Asked</span></span>
-                    <span class="lang-pl">Globalny Acquiring <br /><span class="gradient-text">Bez Zbędnych
-                            Pytań</span></span>
+                    <span class="lang-en">Global Acquiring <br /><span class="gradient-text">Follow YOUR
+                            Client</span></span>
+                    <span class="lang-pl">Globalny Acquiring <br /><span class="gradient-text">Zbierz Twoich
+                            Klientów</span></span>
                 </h1>
                 <p class="text-lg md:text-xl text-slate-400 mb-10 leading-relaxed">
                     <span class="lang-en">Realtalk Payments is a unified platform for accepting payments, mass payouts,
@@ -182,11 +182,16 @@
                 </div>
                 <div
                     class="mt-12 flex flex-wrap justify-center gap-8 text-slate-500 opacity-70 grayscale hover:grayscale-0 transition-all duration-500">
-                    <i class="fa-brands fa-cc-visa text-6xl hover:text-blue-600 transition-colors"></i>
-                    <i class="fa-brands fa-cc-mastercard text-6xl hover:text-red-500 transition-colors"></i>
-                    <i class="fa-brands fa-cc-amex text-6xl hover:text-blue-500 transition-colors"></i>
-                    <i class="fa-brands fa-alipay text-6xl hover:text-blue-400 transition-colors"></i>
-                    <i class="fa-brands fa-weixin text-6xl hover:text-green-500 transition-colors"></i>
+                    <a href="#payment-methods" class="text-slate-500 hover:text-blue-600 transition-colors"><i
+                            class="fa-brands fa-cc-visa text-6xl"></i></a>
+                    <a href="#payment-methods" class="text-slate-500 hover:text-red-500 transition-colors"><i
+                            class="fa-brands fa-cc-mastercard text-6xl"></i></a>
+                    <a href="#payment-methods" class="text-slate-500 hover:text-blue-500 transition-colors"><i
+                            class="fa-brands fa-cc-amex text-6xl"></i></a>
+                    <a href="#payment-methods" class="text-slate-500 hover:text-blue-400 transition-colors"><i
+                            class="fa-brands fa-alipay text-6xl"></i></a>
+                    <a href="#payment-methods" class="text-slate-500 hover:text-green-500 transition-colors"><i
+                            class="fa-brands fa-weixin text-6xl"></i></a>
                 </div>
             </div>
         </div>
@@ -435,7 +440,7 @@
     </section>
 
     <!-- 4. Geography & Methods -->
-    <section id="geo" class="py-20 bg-slate-900 text-white">
+    <section id="payment-methods" class="py-20 bg-slate-900 text-white">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="text-center mb-16">
                 <h2 class="text-3xl font-bold mb-4">
@@ -669,8 +674,6 @@
                                 class="fa-brands fa-telegram text-xl"></i></a>
                         <a href="#" class="text-slate-400 hover:text-white"><i
                                 class="fa-brands fa-linkedin text-xl"></i></a>
-                        <a href="#" class="text-slate-400 hover:text-white"><i
-                                class="fa-brands fa-twitter text-xl"></i></a>
                     </div>
                 </div>
 
@@ -682,10 +685,8 @@
                     <ul class="space-y-2 text-sm text-slate-400">
                         <li><a href="#" class="hover:text-emerald-400"><span class="lang-en">Payments</span><span
                                     class="lang-pl">Płatności</span></a></li>
-                        <li><a href="#" class="hover:text-emerald-400"><span class="lang-en">Payouts</span><span
-                                    class="lang-pl">Wypłaty</span></a></li>
-                        <li><a href="#" class="hover:text-emerald-400"><span class="lang-en">Pricing</span><span
-                                    class="lang-pl">Cennik</span></a></li>
+                        <li><a href="#" class="hover:text-emerald-400"><span class="lang-en">Crypto</span><span
+                                    class="lang-pl">Krypto</span></a></li>
                         <li><a href="#" class="hover:text-emerald-400">API Docs</a></li>
                     </ul>
                 </div>
@@ -698,12 +699,8 @@
                     <ul class="space-y-2 text-sm text-slate-400">
                         <li><a href="#" class="hover:text-emerald-400"><span class="lang-en">About Us</span><span
                                     class="lang-pl">O nas</span></a></li>
-                        <li><a href="#" class="hover:text-emerald-400"><span class="lang-en">Contacts</span><span
-                                    class="lang-pl">Kontakt</span></a></li>
-                        <li><a href="#" class="hover:text-emerald-400"><span class="lang-en">Partners</span><span
-                                    class="lang-pl">Partnerzy</span></a></li>
-                        <li><a href="#" class="hover:text-emerald-400"><span class="lang-en">Careers</span><span
-                                    class="lang-pl">Kariera</span></a></li>
+                        <li><a href="#" class="hover:text-emerald-400"><span class="lang-en">Licenses</span><span
+                                    class="lang-pl">Licencje</span></a></li>
                     </ul>
                 </div>
 
