edit documents to the website.

--- a/index.html
+++ b/index.html
@@ -721,10 +721,27 @@
                 </div>
             </div>
 
-            <div class="border-t border-slate-800 mt-12 pt-8 text-center text-slate-500 text-sm">
-                &copy; 2024-2025 Realtalk Payments. <span class="lang-en">All rights reserved.</span><span
-                    class="lang-pl">Wszelkie prawa zastrzeżone.</span> <a href="#"
-                    class="underline hover:text-white">Privacy Policy</a>.
+            <div
+                class="border-t border-slate-800 mt-12 pt-8 text-center text-slate-500 text-sm flex flex-col md:block gap-4">
+                <span>&copy; 2024-2025 Realtalk Payments. <span class="lang-en">All rights reserved.</span><span
+                        class="lang-pl">Wszelkie prawa zastrzeżone.</span></span>
+
+                <span class="lang-en mt-4 md:mt-0 md:ml-4">
+                    <a href="docs/terms%20(en).pdf" target="_blank" class="underline hover:text-white mx-1">Terms of
+                        Use</a> |
+                    <a href="docs/privacy%20policy%20(en).pdf" target="_blank"
+                        class="underline hover:text-white mx-1">Privacy Policy</a> |
+                    <a href="docs/cookies%20policy%20(en).pdf" target="_blank"
+                        class="underline hover:text-white mx-1">Cookie Policy</a>
+                </span>
+                <span class="lang-pl mt-4 md:mt-0 md:ml-4">
+                    <a href="docs/terms%20(pl).pdf" target="_blank"
+                        class="underline hover:text-white mx-1">Regulamin</a> |
+                    <a href="docs/privacy%20policy%20(pl).pdf" target="_blank"
+                        class="underline hover:text-white mx-1">Polityka Prywatności</a> |
+                    <a href="docs/cookies%20policy%20(pl).pdf" target="_blank"
+                        class="underline hover:text-white mx-1">Polityka Cookies</a>
+                </span>
             </div>
         </div>
     </footer>
