feat: update website content to emphasize Virtual Assets and Web3/Crypto over High-Risk and iGaming.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Realtalk Payments — Global Acquiring Solutions</title>
     <meta name="description"
-        content="Payment processing, mass payouts and acquiring for High-Risk and Low-Risk businesses. Global coverage.">
+        content="Payment processing, mass payouts and acquiring for Virtual Assets, Web3 and E-commerce businesses. Global coverage.">
 
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -167,9 +167,9 @@
                 </h1>
                 <p class="text-lg md:text-xl text-slate-400 mb-10 leading-relaxed">
                     <span class="lang-en">Realtalk Payments is a unified platform for accepting payments, mass payouts,
-                        and finance management. We work with High-Risk, iGaming, Dating, and classic E-com.</span>
+                        and finance management. We work with Virtual Assets, Trading, DeFi, and classic E-com.</span>
                     <span class="lang-pl">Realtalk Payments to jednolita platforma do akceptacji płatności, masowych
-                        wypłat i zarządzania finansami. Obsługujemy High-Risk, iGaming, Dating oraz klasyczny
+                        wypłat i zarządzania finansami. Obsługujemy Wirtualne Aktywa, Trading, DeFi oraz klasyczny
                         E-commerce.</span>
                 </p>
                 <div class="flex flex-col sm:flex-row justify-center gap-4">
@@ -244,25 +244,25 @@
                         POPULAR</div>
                     <div
                         class="w-14 h-14 bg-emerald-100 rounded-xl flex items-center justify-center mb-6 text-emerald-600">
-                        <i class="fa-solid fa-dice text-2xl"></i>
+                        <i class="fa-solid fa-coins text-2xl"></i>
                     </div>
-                    <h3 class="text-xl font-bold mb-3">High-Risk (iGaming/Betting)</h3>
+                    <h3 class="text-xl font-bold mb-3">Virtual Assets (Web3/Crypto)</h3>
                     <div class="lang-en">
-                        <p class="text-slate-600 mb-4">Industries with high turnover and risk levels.</p>
+                        <p class="text-slate-600 mb-4">Solutions for crypto exchanges and digital platforms.</p>
                         <ul class="space-y-2 text-sm text-slate-500">
                             <li class="flex items-center gap-2"><i class="fa-solid fa-check text-emerald-500"></i>
-                                Chargeback protection</li>
+                                Flexible on/off-ramps</li>
                             <li class="flex items-center gap-2"><i class="fa-solid fa-check text-emerald-500"></i>
-                                Transaction cascading</li>
+                                Instant fiat liquidity</li>
                         </ul>
                     </div>
                     <div class="lang-pl">
-                        <p class="text-slate-600 mb-4">Branże o wysokim ryzyku i obrotach.</p>
+                        <p class="text-slate-600 mb-4">Rozwiązania dla giełd krypto i platform cyfrowych.</p>
                         <ul class="space-y-2 text-sm text-slate-500">
                             <li class="flex items-center gap-2"><i class="fa-solid fa-check text-emerald-500"></i>
-                                Ochrona przed chargebackami</li>
+                                Elastyczne on/off-rampy</li>
                             <li class="flex items-center gap-2"><i class="fa-solid fa-check text-emerald-500"></i>
-                                Kaskadowanie transakcji</li>
+                                Natychmiastowa płynność fiat</li>
                         </ul>
                     </div>
                 </div>
@@ -580,8 +580,8 @@
                     class="group bg-white rounded-xl shadow-sm border border-slate-200 p-6 [&_summary::-webkit-details-marker]:hidden">
                     <summary class="flex items-center justify-between cursor-pointer">
                         <h3 class="font-medium text-slate-900">
-                            <span class="lang-en">Do you work with High-Risk projects?</span>
-                            <span class="lang-pl">Czy obsługujecie projekty High-Risk?</span>
+                            <span class="lang-en">Do you work with Web3 & Crypto projects?</span>
+                            <span class="lang-pl">Czy obsługujecie projekty Web3 i Crypto?</span>
                         </h3>
                         <span class="ml-1.5 flex-shrink-0 rounded-full bg-white p-1.5 text-slate-900 sm:p-3">
                             <i class="fa-solid fa-plus group-open:hidden"></i>
@@ -590,9 +590,9 @@
                     </summary>
                     <p class="mt-4 leading-relaxed text-slate-600">
                         <span class="lang-en">Yes, this is one of our specializations. We provide solutions for
-                            gambling, betting, forex, and dating with individual rates.</span>
+                            exchanges, wallets, DeFi, and trading platforms with compliant flows.</span>
                         <span class="lang-pl">Tak, to jedna z naszych specjalizacji. Dostarczamy rozwiązania dla
-                            hazardu, zakładów bukmacherskich, forex i randek z indywidualnymi stawkami.</span>
+                            giełd, portfeli, DeFi i platform tradingowych zgodne z regulacjami.</span>
                     </p>
                 </details>
 
@@ -609,9 +609,10 @@
                         </span>
                     </summary>
                     <p class="mt-4 leading-relaxed text-slate-600">
-                        <span class="lang-en">For High-Risk projects, the standard rolling reserve is 5-10% for 180
+                        <span class="lang-en">For Complex business models, the standard rolling reserve is 5-10% for 180
                             days, but terms are discussed individually based on processing history.</span>
-                        <span class="lang-pl">Dla projektów High-Risk standardowy rolling reserve wynosi 5-10% na 180
+                        <span class="lang-pl">Dla złożonych modeli biznesowych standardowy rolling reserve wynosi 5-10%
+                            na 180
                             dni, ale warunki są omawiane indywidualnie w zależności od historii procesowania.</span>
                     </p>
                 </details>
