feat: Add detailed contact form with fields for name, job title, company, email, and request details.

--- a/index.html
+++ b/index.html
@@ -638,15 +638,61 @@
                             godziny.</span>
                     </p>
 
-                    <form class="max-w-md mx-auto flex flex-col gap-4"
+                    <form class="max-w-xl mx-auto flex flex-col gap-4 text-left"
                         onsubmit="event.preventDefault(); alert('Thanks! / Dzięki!');">
-                        <input type="email" placeholder="E-mail"
-                            class="w-full px-6 py-4 rounded-xl text-slate-900 focus:outline-none focus:ring-2 focus:ring-emerald-300"
-                            required>
+
+                        <div class="grid md:grid-cols-2 gap-4">
+                            <div>
+                                <label class="block text-sm font-medium text-emerald-100 mb-1 ml-1">
+                                    <span class="lang-en">Name <span class="text-red-400">*</span></span>
+                                    <span class="lang-pl">Imię <span class="text-red-400">*</span></span>
+                                </label>
+                                <input type="text"
+                                    class="w-full px-6 py-3 rounded-xl text-slate-900 focus:outline-none focus:ring-2 focus:ring-emerald-300"
+                                    required>
+                            </div>
+                            <div>
+                                <label class="block text-sm font-medium text-emerald-100 mb-1 ml-1">
+                                    <span class="lang-en">Job Title</span><span class="lang-pl">Stanowisko</span>
+                                </label>
+                                <input type="text"
+                                    class="w-full px-6 py-3 rounded-xl text-slate-900 focus:outline-none focus:ring-2 focus:ring-emerald-300">
+                            </div>
+                        </div>
+
+                        <div class="grid md:grid-cols-2 gap-4">
+                            <div>
+                                <label class="block text-sm font-medium text-emerald-100 mb-1 ml-1">
+                                    <span class="lang-en">Company</span>
+                                    <span class="lang-pl">Firma</span>
+                                </label>
+                                <input type="text"
+                                    class="w-full px-6 py-3 rounded-xl text-slate-900 focus:outline-none focus:ring-2 focus:ring-emerald-300">
+                            </div>
+                            <div>
+                                <label class="block text-sm font-medium text-emerald-100 mb-1 ml-1">
+                                    <span class="lang-en">Work Email <span class="text-red-400">*</span></span>
+                                    <span class="lang-pl">Służbowy E-mail <span class="text-red-400">*</span></span>
+                                </label>
+                                <input type="email" pattern="[a-z0-9._%+\-]+@[a-z0-9.\-]+\.[a-z]{2,}$"
+                                    title="Please enter a valid email address (e.g. user@example.com)"
+                                    class="w-full px-6 py-3 rounded-xl text-slate-900 focus:outline-none focus:ring-2 focus:ring-emerald-300"
+                                    required>
+                            </div>
+                        </div>
+
+                        <div>
+                            <label class="block text-sm font-medium text-emerald-100 mb-1 ml-1">
+                                <span class="lang-en">Request Details</span><span class="lang-pl">Opis Zgłoszenia</span>
+                            </label>
+                            <textarea rows="3"
+                                class="w-full px-6 py-3 rounded-xl text-slate-900 focus:outline-none focus:ring-2 focus:ring-emerald-300"></textarea>
+                        </div>
+
                         <button type="submit"
-                            class="w-full bg-slate-900 text-white font-bold px-6 py-4 rounded-xl hover:bg-slate-800 transition">
-                            <span class="lang-en">Connect for Free</span>
-                            <span class="lang-pl">Podłącz za Darmo</span>
+                            class="w-full bg-slate-900 text-white font-bold px-6 py-4 rounded-xl hover:bg-slate-800 transition mt-2">
+                            <span class="lang-en">Request</span>
+                            <span class="lang-pl">Wyślij</span>
                         </button>
                     </form>
                     <p class="text-sm text-emerald-100 mt-4 opacity-70">
