--- a/index.html
+++ b/index.html
@@ -638,8 +638,7 @@
                             godziny.</span>
                     </p>
 
-                    <form class="max-w-xl mx-auto flex flex-col gap-4 text-left"
-                        onsubmit="event.preventDefault(); alert('Thanks! / Dzięki!');">
+                    <form id="contactForm" class="max-w-xl mx-auto flex flex-col gap-4 text-left">
 
                         <div class="grid md:grid-cols-2 gap-4">
                             <div>
@@ -647,7 +646,7 @@
                                     <span class="lang-en">Name <span class="text-red-400">*</span></span>
                                     <span class="lang-pl">Imię <span class="text-red-400">*</span></span>
                                 </label>
-                                <input type="text"
+                                <input type="text" name="name"
                                     class="w-full px-6 py-3 rounded-xl text-slate-900 focus:outline-none focus:ring-2 focus:ring-emerald-300"
                                     required>
                             </div>
@@ -655,7 +654,7 @@
                                 <label class="block text-sm font-medium text-emerald-100 mb-1 ml-1">
                                     <span class="lang-en">Job Title</span><span class="lang-pl">Stanowisko</span>
                                 </label>
-                                <input type="text"
+                                <input type="text" name="job"
                                     class="w-full px-6 py-3 rounded-xl text-slate-900 focus:outline-none focus:ring-2 focus:ring-emerald-300">
                             </div>
                         </div>
@@ -666,7 +665,7 @@
                                     <span class="lang-en">Company</span>
                                     <span class="lang-pl">Firma</span>
                                 </label>
-                                <input type="text"
+                                <input type="text" name="company"
                                     class="w-full px-6 py-3 rounded-xl text-slate-900 focus:outline-none focus:ring-2 focus:ring-emerald-300">
                             </div>
                             <div>
@@ -674,7 +673,7 @@
                                     <span class="lang-en">Work Email <span class="text-red-400">*</span></span>
                                     <span class="lang-pl">Służbowy E-mail <span class="text-red-400">*</span></span>
                                 </label>
-                                <input type="email" pattern="[a-z0-9._%+\-]+@[a-z0-9.\-]+\.[a-z]{2,}$"
+                                <input type="email" name="email" pattern="[a-z0-9._%+\-]+@[a-z0-9.\-]+\.[a-z]{2,}$"
                                     title="Please enter a valid email address (e.g. user@example.com)"
                                     class="w-full px-6 py-3 rounded-xl text-slate-900 focus:outline-none focus:ring-2 focus:ring-emerald-300"
                                     required>
@@ -685,7 +684,7 @@
                             <label class="block text-sm font-medium text-emerald-100 mb-1 ml-1">
                                 <span class="lang-en">Request Details</span><span class="lang-pl">Opis Zgłoszenia</span>
                             </label>
-                            <textarea rows="3"
+                            <textarea rows="3" name="message"
                                 class="w-full px-6 py-3 rounded-xl text-slate-900 focus:outline-none focus:ring-2 focus:ring-emerald-300"></textarea>
                         </div>
 
@@ -805,6 +804,47 @@
                 body.classList.add('lang-en');
             }
         }
+
+        // Form handling logic
+        document.getElementById('contactForm').addEventListener('submit', function (e) {
+            e.preventDefault();
+
+            const submitBtn = this.querySelector('button[type="submit"]');
+            const originalText = submitBtn.innerHTML;
+
+            // 1. Visual Glue: Loading State
+            submitBtn.disabled = true;
+            submitBtn.innerHTML = '<i class="fa-solid fa-circle-notch fa-spin"></i> Processing...';
+
+            // 2. Data Collection
+            const jsonData = {};
+            new FormData(this).forEach((value, key) => jsonData[key] = value);
+
+            // 3. Sending directly to Google Script
+            const GOOGLE_SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbw45MIw3Cs9DxUjdtSPp9VX_Ob48v3rfO1t15hLXBDYkgiiyV4qjUIjbXAySRB5dsoOYg/exec';
+
+            fetch(GOOGLE_SCRIPT_URL, {
+                method: 'POST',
+                mode: 'no-cors', // Essential for Google Apps Script to accept the request
+                headers: {
+                    'Content-Type': 'application/json',
+                },
+                body: JSON.stringify(jsonData)
+            })
+                .then(() => {
+                    // Success!
+                    alert('Thank you! We have received your request.');
+                    this.reset();
+                })
+                .catch(err => {
+                    console.error('Error:', err);
+                    alert('Something went wrong. Please email us directly at hello@realtalk.dev');
+                })
+                .finally(() => {
+                    submitBtn.disabled = false;
+                    submitBtn.innerHTML = originalText;
+                });
+        });
     </script>
 </body>
 
